src/app/components/navbar/navbar.component.scss
nav {
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    opacity: 95%;
}

.nav-light {
    a {
        color: #000000;
    }

    a:hover {
        color: #FF4D5A;
    }
    background-color: #DDDDDD;
    font-family: 'Montserrat' , sans-serif;
    font-weight: 600;
}

.nav-dark {
    a {
        color: #ffffff;
    }

    a:hover {
        color: #FF4D5A;
    }
    font-family: 'Montserrat' , sans-serif;
    font-weight: 600;
}

/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 80px;
    height: 34px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #2196F3;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(25px);
    -ms-transform: translateX(25px);
    transform: translateX(45px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

